css/ig.css
* {
    margin: 0;
    padding: 0;
}

/* ------------------------경민(헤더)------------------------ */
header {
    width: 100%;
    z-index: 1;
    background-color: white;
    position: sticky;
    top: 0px;
}

.top-line {
    width: 100%;
    height: 5px;
    border: none;
    background-color: rgb(83, 76, 76);
}
.logo {
    max-height: 4rem;
    display: flex;
    align-items: center;
}
.image-box {
    overflow: hidden;
    margin: 0 auto;
    width: 15rem;
}

.image-box image {
    max-width: 5rem;
}

.image-box-for-icon {
    width: 1.5rem;
    height: 1.5rem;
}

.img {
    width: 100%;
    height: 100%;
}

#registration {
    display: flex;
    align-items: center;
    justify-content: right;

    flood-color: rgb(95, 94, 95);
    background-color: #e8e6d1;
}

#registration li {
    margin: 0.3rem 0.5rem;
    list-style: none;
}

#registration button {
    background: transparent;
    border: 0;
    font-size: 1rem;
    font-weight: bold;
    color: #333333;
}

#registration button:hover {
    cursor: pointer;
    color: rgb(106, 97, 97);
}

.cart {
    width: 100%;
    height: 100%;
}

.myPage {
    width: 100%;
    height: 100%;
}

.rights {
    display: flex;
    position: absolute;
    right: 0;
    margin: 1rem;
}

.rights li {
    list-style: none;
    margin: 0 0.5rem;
}

.rights button {
    background: transparent;
    border: 0;
    font-size: 1rem;
    font-weight: bold;
    color: #333333;
}
/* ------------------------end of 경민------------------------ */
body {
    margin: 0;
}

.vertical-box {
    display: flex;
    flex-direction: column;
    align-items: left;
}
.horizontal-box {
    display: flex;
    flex-direction: row;
    justify-content: center;
}
.footer-section {
    width: 100%;
    position: absolute;
    /* bottom: 0; */
}
.footer-layer2 {
    height: 100px;
    font-size: 11px;
}
.footer-layer3 {
    width: 100%;
    background-color: #333;
    color: #888;
    font-size: 11px;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* ------------------------태희------------------------ */
#member:hover {
    cursor: pointer;
    color: rgb(106, 97, 97);
}

#menubar .field {
    margin: 0;
    padding: 0;
    font-style: normal;
    list-style: square;
    text-align: center;
    font-family: fantasy;
    background-color: pink;
    border-top: 1px white dotted;
}

#menubar .background {
    overflow: hidden;
    background-size: cover;
    background-image: url(../images/옷사진.jpg);
}

#menubar h1 {
    color: brown;
    text-align: left;
    font-family: fantasy;
}

#menubar .ig {
    display: flex;
    color: white;
    overflow-x: auto;
    padding: 1em 1em;
    font-family: fantasy;
}

#menubar ul {
    margin: 0;
    list-style-type: none;
}

#menubar select {
    background-color: transparent;
    padding: 1px;
    font-size: 16px;
    color: black;
    font-family: fantasy;
    content: icon;
    text-align: center;
    border: 0px;
    background-color: burlywood;
}

#menubar option {
    font-family: fantasy;
    text-align: center;
    color: brown;
}

#menubar .Go {
    color: black;
    font-family: fantasy;
}

#menubar .p {
    font-family: fantasy;
    text-align: center;
}

#menubar .q {
    font-family: fantasy;
    font-size: 12px;
    text-align: center;
}

.clothes {
    display: flex;
    width: 100%;
}

.img-box-for-items {
    width: 20%;
}

/* img 파일은 img-box에 담을 것 -> 모든 이미지 공통 사항 이라 element style 지정정 */
img {
    width: 100%;
}

#menubar .g {
    font-family: fantasy;
    text-align: center;
}

#menubar .l {
    font-size: large;
    font-weight: bold;
    color: black;
}

#menubar .k {
    color: grey;
    font-family: fantasy;
    width: 10vw;
}

/* ---------------------상품 제목--------------------- */

#menubar .product-title {
    text-align: center;
}

#menubar .product-title > a:link {
    color: black;
    text-decoration: none;
}

#menubar .product-title > a:visited {
    color: black;
}

#menubar .product-title > a:hover {
    animation-name: rainbowLoop;
    animation-duration: 6s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
}
/* -------------------------------------------------- */

.up-border {
    border-top: 1px solid lightgray;
}

.flex-row {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center; /* 수평 중앙 정렬 */
    align-items: center; /* 수직 중앙 정렬 (필요시 추가) */
    text-align: center;
    margin: 0 auto;
}

.margin-zero {
    margin: 0 0 0 0;
}

.margin {
    margin: 5px;
}

.delivery-notice {
    font-weight: bold;
    text-align: center;
    animation-name: rainbowLoop, zoomInAndOutLoop;
    animation-duration: 6s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
}

.small-font {
    font-size: small;
}

/* ---------------------애니메이션--------------------- */
@keyframes rainbowLoop {
    0% {
        color: red;
    }
    16.6% {
        color: orange;
    }
    33.3% {
        color: yellow;
    }
    50% {
        color: green;
    }
    66.6% {
        color: blue;
    }
    83.3% {
        color: violet;
    }
    100% {
        color: red;
    }
}

@keyframes zoomInAndOutLoop {
    0% {
        font-size: 25px;
    }
    16.6% {
        font-size: 15px;
    }
    33.3% {
        font-size: 25px;
    }
    50% {
        font-size: 15px;
    }
    66.6% {
        font-size: 25px;
    }
    83.3% {
        font-size: 15px;
    }
    100% {
        font-size: 25px;
    }
}
/* --------------------------------------------------- */

.fixed-box {
    margin: 16px 0;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 20px;
}

.option-menu-title {
    text-align: center;
}

.option-menu-ordered-list {
    list-style: "- ";
}

.option-menu-option {
    position: relative;
}

.weight {
    font-weight: 400px;
}

.wrapper {
    border-top: 1px solid black;
    margin: 0 3vw;
}

.no-list-style {
    list-style: none;
}

.normal-height {
    height: 60vh;
}
.short-height {
    height: 30vh;
}

.full-name-logo {
    color: grey;
    font-family: fantasy;
    width: 10vw;
}

